# Online-Mart-Microservices-Architecture-Project

./: compose.yaml  readme.md
inventory_service/: Dockerfile  pyproject.toml
inventory_service/app/: db_engine.py  deps.py  main.py  settings.py
inventory_service/app/consumers/: add_stock_consumer.py
inventory_service/app/crud/: inventory_crud.py
inventory_service/app/models/: inventory_model.py
notification_service/: pyproject.toml
notification_service/app/: app.py  config.py  consumer.py  mailer.py  main.py  notification.py  settings.py
order_service/app/: db_engine.py  deps.py  main.py  settings.py
order_service/app/crud/: order_crud.py
order_service/app/models/: order_model.py
payment_service/: Dockerfile  pyproject.toml
payment_service/app/: db_engine.py  deps.py  main.py  settings.py
payment_service/app/crud/: payment_crud.py
payment_service/app/models/: payment_model.py
product_service/: pyproject.toml
product_service/app/: db_engine.py  deps.py  main.py  product.proto  product_pb2.py  settings.py
product_service/app/consumers/: product_consumer.py
product_service/app/crud/: product_crud.py
product_service/app/models/: product_model.py
user_service/: Dockerfile  pyproject.toml
user_service/app/: database.py  deps.py  main.py  models.py  schemas.py  service.py  settings.py
