[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
sqlmodel = "^0.0.21"
aiokafka = "^0.11.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
httpx = "^0.27.0"
fastapi-mail = "^1.4.1"
aiohttp = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
